syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pb";

service TodoService {
  rpc FindAll (google.protobuf.Empty) returns (ListTodoResponse) {}
  rpc FindByID (GetTodoByIDRequest) returns (GetTodoResponse) {}
  rpc Create (CreateTodoRequest) returns (GetTodoResponse) {}
  rpc Update (UpdateTodoRequest) returns (GetTodoResponse) {}
  rpc Delete (GetTodoByIDRequest) returns (google.protobuf.Empty) {}
}

message Todo {
  int64 id = 1;
  string title = 2;
  string description = 3;
  optional bool is_done = 4;
  int64 user_id = 5;
  int64 category_todo_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ListTodoResponse {
  repeated Todo todos = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message GetTodoByIDRequest {
  int64 id = 1;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  int64 user_id = 3;
  int64 category_todo_id = 4;
}

message UpdateTodoRequest {
  int64 id = 1;
  string title = 2;
  string description = 3;
  optional bool is_done = 4;
  int64 user_id = 5;
}
